
[project]
name = "synthesis_octant"
version = "0.1.0"
description = "A signal forge that aggregates messy qualitative inputs, converts them into explainable scores, and prepares faster DPI allocation plans."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
